syntax = "proto3";

package product;

service ProductService {
    rpc CreateProduct (Product) returns (ProductResponse);
    rpc GetProduct (ProductRequest) returns (Product);
    rpc GetAllProducts (Empty) returns (Products);
    rpc UpdateProduct (Product) returns (ProductResponse);
    rpc DeleteProduct (ProductRequest) returns (ProductResponse);
}

message Product {
    string id = 1;
    string name = 2;
    double price = 3;
}

message ProductRequest {
    string id = 1;
}

message ProductResponse {
    bool success = 1;
    string message = 2;
}

message Products {
    repeated Product product = 1;
}

message Empty {}
